[package]
name = "claim-itch-bundle"
version = "0.1.0"
edition = "2021"
authors = ["Aurora Long <contact@aurora-long.me"]
description = "A program to automate claiming itch.io games purchased as part of large bundles"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fantoccini = "0.19"
tokio = { version = "1.26", features = ["full"] }
clap = {version = "4.1", features = ["derive"] }
serde_json = "1.0"